--- a/01_Basic_HTML/index.html
+++ b/01_Basic_HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Don't forget a title</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/reset.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
   </head>
   <body>
 
