--- a/01_Basic_HTML/index.html
+++ b/01_Basic_HTML/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Don't forget a title</title>
+    <title>Basic HTML page</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
   </head>
   <body>
